--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#icons">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#newsletter">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Book</a>
+            <a class="nav-link" href="#" data-toggle="modal" data-target="#bookingModal">Book</a>
           </li>
         </ul>
       </div>
@@ -54,14 +54,14 @@
         <h3 class="display-5 mb-0">MODEREN CAMPING</h3>
         <h1 class="display-1">AURORA GROVE</h1>
         <p class="lead d-none d-md-block">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit corporis reprehenderit voluptates laboriosam quidem! Eos doloribus dolorem eaque suscipit autem.</p>
-        <button id="book" class="btn btn-lg btn-primary px-5">BOOK NOW</button>
+        <button id="book" class="btn btn-lg btn-primary px-5" data-toggle="modal" data-target="#bookingModal">BOOK NOW</button>
       </div>
     </section>
     <!-- showcase section end -->
-    <section>
+    <section id="icons">
       <div class="container text-center mt-5">
         <h2>YOU SHOW UP, WE PITCH THE TENT</h2>
-        <div class="row">
+        <div class="row mt-3">
           <div class="col-md-4 p-3">
             <!-- <img src="" alt=""> -->
             <i class="fa fa-user d-none d-md-inline" style="font-size:65px;"></i>
@@ -85,7 +85,7 @@
     </section>
 
     <section>
-      <div class="container text-center mt-2 p-3">
+      <div class="container text-center mt-4 p-3">
         <h3>We have create a camping exprience that is awesome.</h3>
         <div class="row m-2">
           <div class="col-md-6 p-3">
@@ -114,7 +114,7 @@
     </section>
 
     <section id="quotes">
-      <div class="mt-4 container text-center">
+      <div class="mt-5 mb-5 pb-5 container text-center">
         <h3>WAHT OUR CUSTOMER SAY</h3>
         <div class="row">
           <div class="col-md-4 my-2">
@@ -141,10 +141,172 @@
         </div>
       </div>
     </section>
-  <div class="container">
-    <h1 class="display-3 ">Bootstrap </h1>
+
+    <section>
+      <div class="container mt-5 mb-5">
+        <div class="row">
+          <div class="col-md-7 mb-3">
+            <div id="mainCarousel" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="https://placeimg.com/300/300/tech" alt="" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="https://placeimg.com/300/300/people" alt="" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="https://placeimg.com/300/300/nature" alt="" class="d-block w-100">
+                </div>
+              </div>
+              <a href="#mainCarousel" class="carousel-control-prev" data-slide="prev" role="button">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+               <a href="#mainCarousel" class="carousel-control-next" data-slide="next" role="button">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div> 
+          <div class="col-md-5">
+            <h1>Camping made awesome</h1>
+            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam atque voluptate culpa, esse reprehenderit facere?</p>
+            <a href="">See for yorself <i class="fa fa-arrow-right"> </i></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container text-center mt-5">
+        <h3>What Others say</h3>
+        <h5 class="text-primary">#auroragrove</h5>
+        <div class="row mt-4">
+          <div class="col-6 col-lg-3 mb-4">
+            <img src="https://placeimg.com/200/150/tech" alt="">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img src="https://placeimg.com/200/150/nature" alt="">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img src="https://placeimg.com/200/150/people" alt="">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img src="https://placeimg.com/200/150/nature" alt="">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img src="https://placeimg.com/200/150/tech" alt="">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img src="https://placeimg.com/200/150/nature" alt="">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img src="https://placeimg.com/200/150/tech" alt="">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img src="https://placeimg.com/200/150/tech" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="mt-4 container text-center">
+        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
+        <blockquote class="blockquote">
+          <p class="mb-o">Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, accusamus. </p>
+          <footer class="blockquote-footer">Mark twain</footer>
+        </blockquote>
+      </div>
+    </section>
+
+    <section id="newsletter" class="bg-dark">
+      <div class="container text-white text-center py-5">
+        <p class="lead">JOIN OUR NEWSLETTER FOR OFFERS</p>
+        <div class="row justify-content-center">
+          <div class="col-10 col-sm-8 col-md-6 col-lg-4">
+            <form action="" class="form-inline">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="email">
+                <div class="input-group-append">
+                  <button class="btn btn-primary">Join Now</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
     
-  </div>
+    <!-- footer -->
+    <section id="footer" class="p-3 bg-secondary">
+      <ul class="nav text-center justify-content-center flex-column flex-sm-row">
+        <li class="nav-item">
+          <a href="" class="nav-link text-white">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a href="" class="nav-link text-white">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <a href="" class="nav-link text-white">CONTACT</a>
+        </li>
+        <li class="nav-item">
+          <a href="" class="nav-link text-white" data-toggle="modal" data-target="#bookingModal">BOOK NOW</a>
+        </li>
+        <li class="nav-item">
+          <a href="" class="nav-link text-white">EXPLORE</a>
+        </li>
+      </ul>
+    </section>
+
+    <!-- modal -->
+    <div class="modal" id="bookingModal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+             <h5 class="model-title">New Booking</h5>
+             <button type="button" class="close" data-dismiss="modal" aria-label="close modal">
+               <span aria-hidden="true">&times;</span>
+             </button>
+          </div>
+          <div class="modal-body">
+            <p>Please fill out the form</p>
+            <form>
+              <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="emal" class="form-control" id="email" placeholder="name@gmail.com">
+              </div>
+                <div class="form-group">
+                  <label for="adults">Number of Adults</label>
+                  <select class="form-control" id="adults">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="children">Number of Children</label>
+                  <select class="form-control" id="children">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="requests">Additional Requests</label>
+                  <textarea class="form-control" name="requests" id="requests" cols="10" rows="3"></textarea>
+                </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary">Submit Request</button>
+            <button class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
